; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-tq.c_timeout_queue_kill.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-tq.c_timeout_queue_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeout_queue = type { i32 }
%struct.lwan_connection = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeout_queue_kill(%struct.timeout_queue* %0, %struct.lwan_connection* %1) #0 {
  %3 = alloca %struct.timeout_queue*, align 8
  %4 = alloca %struct.lwan_connection*, align 8
  store %struct.timeout_queue* %0, %struct.timeout_queue** %3, align 8
  store %struct.lwan_connection* %1, %struct.lwan_connection** %4, align 8
  %5 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %6 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %7 = call i32 @timeout_queue_remove(%struct.timeout_queue* %5, %struct.lwan_connection* %6)
  %8 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %9 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i64 @LIKELY(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %26

13:                                               ; preds = %2
  %14 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %15 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @coro_free(i32* %16)
  %18 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %19 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %18, i32 0, i32 0
  store i32* null, i32** %19, align 8
  %20 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %21 = getelementptr inbounds %struct.timeout_queue, %struct.timeout_queue* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %24 = call i32 @lwan_connection_get_fd(i32 %22, %struct.lwan_connection* %23)
  %25 = call i32 @close(i32 %24)
  br label %26

26:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @timeout_queue_remove(%struct.timeout_queue*, %struct.lwan_connection*) #1

declare dso_local i64 @LIKELY(i32*) #1

declare dso_local i32 @coro_free(i32*) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @lwan_connection_get_fd(i32, %struct.lwan_connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
